한국어 제목 검색 방식 변경, Oauth2 가입 데이터 변경, 금영 노래 검색 및 애창곡 추가 해금